@@ -1,0 +1,6 @@
+QT -= gui
+SOURCES += main.cpp
+
+TARGET = manual-batterymon-test
+
+include(../common-install.pri)
